<resources>
    <string name="app_name">PriceMonitoringApp</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="col1">Name</string>
    <string name="col2">Age</string>
    <string name="col3">id</string>
    <string name="row1Name">Miad</string>
    <string name="row1Age">23</string>
    <string name="row1Id">118</string>
    <string name="row2Name">Hasan</string>
    <string name="row2Age">23</string>
    <string name="row2Id">118</string>
    <string name="row3Name">Imran</string>
    <string name="row3Age">23</string>
    <string name="row3Id">118</string>

    <string name="menu_add_product">Add Product</string>
    <string name="menu_product_list">Product List</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_complain">Submit Complaint</string>
    <string name="menu_add_price">Add Price</string>
    <string name="menu_pending_complaints">Pending Complaints</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
</resources>